# mach

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  AUDIT.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  GAMEPLAN.md  HANDOFF.md  LICENSE  Makefile  Makefile.win  PARITY_CHECKLIST.md  PHASE2_PROGRESS.md  PLAN.md  README.md  ROADMAP.md  SECURITY.md  SELFHOSTING_PROGRESS.md  STATUS.md  STYLE.md  TASK.md  debug_trace.gdb  debug_trace2.gdb  install.ps1  install.sh  mach.json  mach.toml  output  report.md  settings.json  test.mach
.github/: FUNDING.yml  copilot-instructions.md  labels.yml  loom.yml  sync-labels.sh
bench/: README.md  gen.sh  run.sh
boot/: ast.c  ast.h  codegen.c  codegen.h  commands.c  commands.h  commands_dep.c  compilation.c  compilation.h  comptime.c  comptime.h  config.c  config.h  filesystem.c  filesystem.h  lexer.c  main.c  mir.c  mir.h  mir_print.c  mir_print.h  module.c  module.h  parser.c  parser.h  semantic.c  semantic.h  test_mir.c  token.c  token.h  type.c  type.h  x86_64.h
dbg/: .gitattributes  .gitignore  README.md  self-additive.sh  verify.sh
doc/: README.md  arrays-and-slices.md  asm.md  cheatsheet.md  cli.md  compile-time.md  compiletime.md  comptime.md  config.md  control-flow.md  declarations.md  dependencies.md  expressions-and-operators.md  expressions.md  functions-and-methods.md  generics.md  getting-started.md  grammar.md  inline-assembly.md  interoperability.md  keywords-and-symbols.md  keywords.md  language-spec.md  language-tour.md  lexical-structure.md  literals.md  mach.toml.example  manifest.md  masm_spec.md  memory.md  (+10 more)
(+1392 files in other folders)
